# learn_opengl

./: CMakeLists.txt
res/shaders/: 3colors.shader  basic.shader
src/: main.cpp
